@@ -1,3 +1,9 @@
+Sat Apr 26 08:05:36 2014  Tanaka Akira  <akr@fsij.org>
+
+	* test/ruby/test_process.rb (test_rlimit_nofile): Don't limit
+	  RLIMIT_NOFILE too small.
+	  This fix sporadic "[ASYNC BUG] thread_timer: select" on GNU/Linux.
+
 Fri Apr 25 22:54:34 2014  Naohisa Goto  <ngotogenome@gmail.com>
 
 	* lib/fileutils.rb (rmdir): rescue Errno::EEXIST in addition to
